<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nova2"
    tools:context=".FourthActivity">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="128dp"
        android:layout_height="32dp"
        android:layout_marginStart="142dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:text="@string/perfilNome"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView7" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="355dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:text="@string/textFavorito"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickBotaoFProximo"
        android:text="@string/buttonFinal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="90dp"
        android:layout_height="168dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@drawable/viuvanegra" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="90dp"
        android:layout_height="168dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="172dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        app:srcCompat="@drawable/tssquad" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="150dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/friends" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="368dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="27dp"
        android:text="@string/textFilmesAssistidos"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="83dp"
        android:layout_height="168dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/spacejam" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="83dp"
        android:layout_height="168dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/luca" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="83dp"
        android:layout_height="168dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/freeguy__2_" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="83dp"
        android:layout_height="168dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15"
        app:srcCompat="@drawable/cruella" />

</androidx.constraintlayout.widget.ConstraintLayout>