<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nova2"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="383dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="217dp"
        android:text="@string/thirdAAFilme"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.583"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="95dp"
        android:layout_height="192dp"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215"
        app:srcCompat="@drawable/tssquad" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="95dp"
        android:layout_height="192dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.454"
        app:srcCompat="@drawable/duna" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="95dp"
        android:layout_height="192dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.454"
        app:srcCompat="@drawable/freeguy__2_" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="378dp"
        android:layout_height="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="327dp"
        android:text="@string/thirdAFilme"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="95dp"
        android:layout_height="192dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="29dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/spacejam" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="95dp"
        android:layout_height="192dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/viuvanegra" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="95dp"
        android:layout_height="192dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:srcCompat="@drawable/cruella" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:layout_marginBottom="16dp"
        android:onClick="onClickBotaoTProximo"
        android:text="@string/buttonOk2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <SearchView
        android:layout_width="82dp"
        android:layout_height="72dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:layout_width="84dp"
        android:layout_height="65dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
</androidx.constraintlayout.widget.ConstraintLayout>